--- a/YesWeAreTopNumStoreOwnersSOULxHENEX.html
+++ b/YesWeAreTopNumStoreOwnersSOULxHENEX.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script>
+  // Define the domains to bypass
+  const bypassedDomains = ["topnumstore.com"];
 
+  // Check the current domain
+  if (bypassedDomains.includes(window.location.hostname)) {
+    // Redirect to your desired website
+    window.location.href = "https://topnumstore.vercel.app/";
+  }
+</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+
+  <!-- Login Page -->
+  <div id="login-container">
+    <h2>Login</h2>
+    <form id="login-form">
+      <div class="input-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Enter your username" required>
+      </div>
+      <div class="input-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter your password" required>
+      </div>
+      <button type="submit">Login</button>
+      <p id="login-error" class="error" style="display: none;">Invalid username or password!</p>
+    </form>
+  </div>
+
+  <script src="main.js"></script>
+</body>
+</html>
