--- a/YesWeAreTopNumStoreOwnersSOULxHENEX.html
+++ b/YesWeAreTopNumStoreOwnersSOULxHENEX.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script>
-  // Define the domains to bypass
-  const bypassedDomains = ["topnumstore.com"];
-
-  // Check the current domain
-  if (bypassedDomains.includes(window.location.hostname)) {
-    // Redirect to your desired website
-    window.location.href = "https://topnumstore.vercel.app/";
-  }
-</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Admin Panel</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <!-- Login Page -->
-  <div id="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <div class="input-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter your username" required>
-      </div>
-      <div class="input-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" required>
-      </div>
-      <button type="submit">Login</button>
-      <p id="login-error" class="error" style="display: none;">Invalid username or password!</p>
-    </form>
+  <h2>Admin Panel</h2>
+  <div id="messages-list">
+    <h3>Customer Messages:</h3>
+    <!-- Display customer messages here -->
+  </div>
+  <div id="sold-numbers">
+    <h3>Sold Numbers:</h3>
+    <!-- Display history of sold numbers here -->
   </div>
 
-  <script src="main.js"></script>
+  <script>
+    // Example: Displaying sample data
+    const messagesList = document.getElementById('messages-list');
+    const soldNumbers = document.getElementById('sold-numbers');
+    
+    // Sample data
+    const customerMessages = ["Message 1 from user", "Message 2 from user"];
+    const historyOfSoldNumbers = ["1234567890", "9876543210"];
+    
+    // Display customer messages
+    customerMessages.forEach((message, index) => {
+      const messageItem = document.createElement('p');
+      messageItem.textContent = Message ${index + 1}: ${message};
+      messagesList.appendChild(messageItem);
+    });
+
+    // Display history of sold numbers
+    historyOfSoldNumbers.forEach((number) => {
+      const numberItem = document.createElement('p');
+      numberItem.textContent = Sold Number: ${number};
+      soldNumbers.appendChild(numberItem);
+    });
+  </script>
 </body>
 </html>
