--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prediction Hacking</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body>
+    <div class="container">
+        <!-- Header -->
+        <div class="header">
+            <h1>PREDICTION HACKING</h1>
+        </div>
+
+        <!-- Input Box -->
+        <div class="input-section">
+            <label for="last-period">Enter Last Period Number:</label>
+            <input type="number" id="last-period" placeholder="Enter last period number">
+        </div>
+
+        <!-- Buttons -->
+        <div class="button-section">
+            <button id="start-btn">Start</button>
+            <button id="stop-btn">Stop</button>
+        </div>
+
+        <!-- Output -->
+        <div class="prediction-box">
+            <p class="output-text">Prediction: <span id="prediction">Waiting...</span></p>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <button id="submit-btn">Submit</button>
+            <p class="footer-text">by SoulzinMaker</p>
+        </div>
+    </div>
+
+    <script src="main.js"></script>
+</body>
+</html>
+
 <div class="container">
     <!-- Header -->
     <div class="header">
