--- a/index.html
+++ b/index.html
@@ -3,51 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prediction Hacking</title>
+    <title>&#x50;&#x72;&#x65;&#x64;&#x69;&#x63;&#x74;&#x69;&#x6F;&#x6E;&#x20;&#x48;&#x61;&#x63;&#x6B;&#x69;&#x6E;&#x67;</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <div class="header">
-            <h1>PREDICTION HACKING</h1>
+    <div class="&#x63;&#x6F;&#x6E;&#x74;&#x61;&#x69;&#x6E;&#x65;&#x72;">
+        <div class="&#x68;&#x65;&#x61;&#x64;&#x65;&#x72;">
+            <h1>&#x53;&#x4F;&#x55;&#x4C;&#x53;&#x20;&#x50;&#x52;&#x56;&#x54;&#x20;&#x50;&#x52;&#x45;&#x44;&#x49;&#x43;&#x54;&#x53;</h1>
         </div>
-
-        <!-- Input Box -->
-        <div class="input-section">
-            <label for="last-period">Enter Last Period Number:</label>
-            <input type="number" id="last-period" placeholder="Enter last period number">
+        <div class="&#x69;&#x6E;&#x70;&#x75;&#x74;&#x2D;&#x73;&#x65;&#x63;&#x74;&#x69;&#x6F;&#x6E;">
+            <label for="last-period">&#x45;&#x6E;&#x74;&#x65;&#x72;&#x20;&#x4C;&#x61;&#x73;&#x74;&#x20;&#x50;&#x65;&#x72;&#x69;&#x6F;&#x64;&#x20;&#x4E;&#x75;&#x6D;&#x62;&#x65;&#x72;:</label>
+            <input type="number" id="last-period" placeholder="&#x45;&#x6E;&#x74;&#x65;&#x72;&#x20;&#x6C;&#x61;&#x73;&#x74;&#x20;&#x70;&#x65;&#x72;&#x69;&#x6F;&#x64;&#x20;&#x6E;&#x75;&#x6D;&#x62;&#x65;&#x72;">
         </div>
-
-        <!-- Timer -->
-        <div class="timer-section">
-            <p class="timer-text">Next Prediction in: <span id="timer">30</span>s</p>
+        <div class="&#x74;&#x69;&#x6D;&#x65;&#x72;&#x2D;&#x73;&#x65;&#x63;&#x74;&#x69;&#x6F;&#x6E;">
+            <p class="&#x74;&#x69;&#x6D;&#x65;&#x72;&#x2D;&#x74;&#x65;&#x78;&#x74;">&#x4E;&#x65;&#x78;&#x74;&#x20;&#x50;&#x72;&#x65;&#x64;&#x69;&#x63;&#x74;&#x69;&#x6F;&#x6E;&#x20;&#x69;&#x6E;: <span id="timer">30</span>s</p>
         </div>
-
-        <!-- Buttons -->
-        <div class="button-section">
-            <button id="start-btn">Start</button>
-            <button id="stop-btn">Stop</button>
+        <div class="&#x62;&#x75;&#x74;&#x74;&#x6F;&#x6E;&#x2D;&#x73;&#x65;&#x63;&#x74;&#x69;&#x6F;&#x6E;">
+            <button id="start-btn">&#x53;&#x74;&#x61;&#x72;&#x74;</button>
+            <button id="stop-btn">&#x53;&#x74;&#x6F;&#x70;</button>
         </div>
-
-        <!-- Output -->
-        <div class="prediction-box">
-            <p class="output-text">Prediction: <span id="prediction">Waiting...</span></p>
+        <div class="&#x70;&#x72;&#x65;&#x64;&#x69;&#x63;&#x74;&#x69;&#x6F;&#x6E;&#x2D;&#x62;&#x6F;&#x78;">
+            <p class="&#x6F;&#x75;&#x74;&#x70;&#x75;&#x74;&#x2D;&#x74;&#x65;&#x78;&#x74;">&#x50;&#x72;&#x65;&#x64;&#x69;&#x63;&#x74;&#x69;&#x6F;&#x6E;: <span id="prediction">&#x57;&#x61;&#x69;&#x74;&#x69;&#x6E;&#x67;&#x2E;&#x2E;&#x2E;</span></p>
         </div>
-
-        <!-- History -->
-        <div class="history-box">
-            <h3>Last 5 Predictions</h3>
+        <div class="&#x68;&#x69;&#x73;&#x74;&#x6F;&#x72;&#x79;&#x2D;&#x62;&#x6F;&#x78;">
+            <h3>&#x4C;&#x61;&#x73;&#x74;&#x20;5&#x20;&#x50;&#x72;&#x65;&#x64;&#x69;&#x63;&#x74;&#x69;&#x6F;&#x6E;&#x73;</h3>
             <ul id="history-list"></ul>
         </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <button id="submit-btn">Submit</button>
-            <p class="footer-text">by SoulzinMaker</p>
+        <div class="&#x66;&#x6F;&#x6F;&#x74;&#x65;&#x72;">
+            <button id="submit-btn">&#x53;&#x75;&#x62;&#x6D;&#x69;&#x74;</button>
+            <p class="&#x66;&#x6F;&#x6F;&#x74;&#x65;&#x72;&#x2D;&#x74;&#x65;&#x78;&#x74;">&#x62;&#x79;&#x20;&#x53;&#x6F;&#x75;&#x6C;&#x7A;&#x69;&#x6E;&#x4D;&#x61;&#x6B;&#x65;&#x72;</p>
         </div>
     </div>
-
     <script src="main.js"></script>
 </body>
 </html>
